--- a/sementic_server/data/yml/relation.yml
+++ b/sementic_server/data/yml/relation.yml
@@ -52,12 +52,25 @@ AuthorizedBy:
 - 登记
 BankCardHolder: []
 BrotherOrSister:
-- 二堂哥
+- 姊妹
 - 嫂嫂
 - 哥哥
-- 姐姐
-- 弟弟
 - 妹妹
+- 弟妹
+- 二堂哥
+- 兄嫂
+- 兄弟
+- 姐姐
+- 小妹
+- 表兄弟
+- 嫂子
+- 妹夫
+- 弟媳
+- 手足
+- 阿哥
+- 长兄
+- 弟弟
+- 堂兄弟
 Call:
 - 致电
 - 通电话
@@ -68,21 +81,52 @@ Call:
 - 通话
 - 打了电话
 - 电话联系
-CalledBy:
 - 通话记录
+- 打过哪几个电话
+- 打过多少个电话
+- 打过的电话
+- 打了哪些电话
+CalledBy:
 - 接到的电话
 - 接到哪位的电话
 - 接到了谁的电话
 - 接到了哪位的电话
 - 接到过哪个人的电话
-ChildToFatherSibling: []
+ChildToFatherSibling:
+- 二伯伯
+- 小叔叔
+- 三叔叔
+- 大伯伯
+- 伯伯
+- 三叔
+- 四姑
+- 叔叔
+- 三伯伯
+- 小伯伯
+- 大叔叔
+- 二叔叔
+- 老叔叔
+- 伯母
+- 二姑
+- 二伯
+- 姑姑
+- 姑父
 ChildToMotherSibling:
+- 大姨
+- 姨夫
 - 舅舅
 ChildToParent:
+- 岳父
 - 爸爸
-- 妈妈
+- 亲娘
+- 父母亲
 - 父亲
+- 继父
 - 母亲
+- 妈妈
+- 阿妈
+- 养父
+- 养母
 CoHasAddr:
 - 所在地
 CoHasEmail:
@@ -167,12 +211,50 @@ Colleague:
 - 工友
 - 同僚
 - 一起工作
-CousinFromFatherSide: []
+CousinFromFatherSide:
+- 二堂弟
+- 堂姐
+- 三堂姐
+- 小堂妹
+- 大堂妹
+- 堂姐妹
+- 三堂弟
+- 大堂哥
+- 二堂妹
+- 大堂弟
+- 三堂哥
+- 二堂姐
+- 大堂姐
+- 堂弟
+- 小堂姐
+- 小堂弟
+- 堂哥
+- 堂妹
+- 三堂妹
+- 小堂哥
 CousinFromMotherSide:
-- 表妹
-- 表哥
 - 表姐
+- 三表姐
+- 大表弟
+- 二表弟
+- 三表哥
+- 二表哥
+- 二表妹
+- 大表妹
 - 表弟
+- 表姐夫
+- 小表弟
+- 大表姐
+- 大表哥
+- 表哥
+- 小表妹
+- 表妹
+- 表姐妹
+- 三表弟
+- 二表姐
+- 小表姐
+- 三表妹
+- 小表哥
 CreateQQGroup:
 - 邀进群
 - 邀请进群
@@ -186,19 +268,32 @@ CreateQQGroup:
 CreateWeChatGroup:
 - 创建的微信群
 DouYinFollow: []
-DouYinFollower:
-- 互粉
-- 粉丝
-- 关注
+DouYinFollower: []
 DouYinHolder: []
 DouYinLoginWithMobileNum: []
 EmailHolder: []
-EmailOfAlipayLogin: []
+EmailOfAlipayLogin:
+- 登陆的支付宝账号
+- 登的支付宝号
+- 登陆哪一个支付宝账号
+- 登陆哪一个支付宝账户
+- 登哪个支付宝帐号
+- 登陆什么支付宝帐号
+- 登陆哪个支付宝账户
+- 能登哪一个支付宝账号
+- 登哪一个支付宝账户
+- 可登陆的支付宝号
+- 登陆的支付宝账号
+- 登的支付宝帐号
+- 绑定的支付宝帐户
+- 绑定的哪一个支付宝账户
+- 绑定了哪个支付宝
 EmailOfJDLogin: []
 EmailOfTaoBaoLogin: []
 EmailWithCo: []
 FatherSiblingToChild:
 - 表叔
+- 侄儿
 FixedPhoneHolder: []
 FixedPhoneWithCo: []
 GetMessageFrom:
@@ -209,8 +304,13 @@ GetMessageFrom:
 - 收到了哪几个人的短信
 - 收到了哪些人的短信
 - 收到过谁的短信
+- 收到了哪位的短信
+- 收到过什么人的短信
+- 收到过哪些人的短信
 HusbandToWife:
+- 娘子
 - 老婆
+- 孩他娘
 - 妻子
 IDCardDLHolder: []
 IDCardTWHolder: []
@@ -218,10 +318,17 @@ IMEIHolder: []
 IMEIWithIMSI:
 - 手机imsi号码
 - SIM卡的IMSI
-IMEIWithMAC: []
+- SIM卡的imsi
+IMEIWithMAC:
+- 手机的imei号
+- 电话的IMEI号
+- 手机串码
+- 手机的MAC号码
+- 电话的物理地址
 IMSIBindMobileNum:
 - 手机物理地址
 - 手机卡imsi号
+- 手机卡imsi
 - 手机imsi号码
 - 的imsi号
 - 的IMSI号
@@ -364,29 +471,34 @@ PHasVehicle:
 PHasWeChat:
 - 微信
 ParentToChild:
-- 次子
-- 孙女
-- 三侄女
+- 子女
+- 女人
+- 小女儿
+- 二儿子
+- 小儿子
+- 外孙女
+- 大外甥女
+- 侄女
 - 大女儿
-- 大儿子
 - 外甥女
+- 女儿
+- 三侄女
+- 大儿子
+- 儿子
+- 二女儿
+- 二侄女
+- 养子
+- 孙女
+- 小外甥女
+- 大侄女
+- 小侄女
 - 儿女
 - 闺女
-- 二女儿
-- 小外甥女
-- 子女
 - 女婿
-- 小侄女
-- 小女儿
-- 大侄女
-- 儿子
-- 女儿
-- 二儿子
-- 大外甥女
-- 小儿子
-- 侄女
-- 二侄女
-- 女人
+- 次子
+- 长子
+- 养女
+- 子嗣
 Partner:
 - 同伙
 - 同伙人
@@ -430,72 +542,53 @@ RegisterPlace:
 - 哪里注册
 - 哪个地址注册
 - 注册公司
+- 注册的企业
+- 注册了公司
+- 注册过公司
 RegisterPlaceWithCo: []
 Relative:
-- 外孙女
-- 养父
-- 养母
 - 孙子
-- 表姐夫
-- 婶婶
+- 姻亲
+- 曾孙子
 - 亲人
+- 亲属
+- 爷爷
+- 婶婶
+- 亲属
+- 亲人
+- 亲家
 - 表姑
-- 小表弟
-- 三伯伯
-- 小表哥
 - 姨母
 - 二爹
 - 三侄子
 - 表舅
-- 大表弟
-- 小表姐
 - 二姨
-- 叔叔
 - 小侄子
 - 婆婆
 - 老汉
 - 幺姑
-- 侄儿
 - 妻室
 - 爱人
 - 爹爹
 - 三舅
 - 小弟
-- 二表姐
-- 姑妈
 - 大姑
 - 太奶奶
-- 老伴
 - 爹地
-- 三叔叔
 - 叔父
-- 二伯伯
 - 老弟
 - 爷爷
 - 老姑
-- 三堂哥
-- 娘子
-- 三堂姐
 - 大伯
 - 养父母
-- 大表妹
 - 五姨
-- 弟弟
-- 父母亲
 - 娘亲
 - 大哥
-- 三表哥
 - 生父
-- 妻子
 - 小伯
-- 堂妹
 - 婆娘
-- 嫂子
 - 祖父
-- 表兄弟
 - 内助
-- 堂哥
-- 表哥
 - 小叔
 - 幺妹
 - 人夫
@@ -506,7 +599,6 @@ Relative:
 - 老子
 - 继母
 - 爹妈
-- 二堂姐
 - 幺舅
 - 贤弟
 - 季母
@@ -515,73 +607,50 @@ Relative:
 - 姨爹
 - 家长
 - 伯父
-- 二姑
-- 表叔
 - 父辈
 - 世叔
 - 阿姐
-- 姑姑
 - 外婆
-- 表弟
-- 子嗣
 - 小舅
 - 曾祖母
 - 家眷
 - 亲戚
 - 老伯
 - 老姐
-- 弟媳
 - 外公
 - 家口
 - 收养
-- 父亲
 - 二哥
 - 大叔
 - 老舅
 - 外祖父
-- 二表哥
 - 家室
 - 严父慈母
 - 小外甥
-- 兄弟
-- 三堂弟
 - 佳偶
 - 亲家
-- 兄弟
-- 阿妈
 - 上人
-- 三表妹
 - 兄长
 - 仁弟
 - 后代
-- 三叔
 - 内人
 - 亲家母
 - 姑奶奶
 - 姨奶奶
 - 堂兄
-- 长兄
 - 姨娘
-- 老伴儿
-- 二表妹
 - 父母
 - 远亲
 - 大哥
 - 亲家公
 - 夫妇
 - 妻妾
-- 姐姐
-- 堂姐
-- 大堂弟
-- 表姐
 - 姻亲
 - 娘舅
-- 堂姐妹
 - 二侄子
 - 伉俪
 - 子代
 - 季父
-- 大堂哥
 - 配偶
 - 哥俩
 - 老两口
@@ -595,19 +664,10 @@ Relative:
 - 老小
 - 大爷
 - 曾祖父
-- 孩他爹
-- 小表妹
-- 小妹
-- 母亲
-- 堂兄弟
 - 孩子
 - 太太
 - 外祖母
 - 先生
-- 小堂妹
-- 三堂妹
-- 小堂哥
-- 姨夫
 - 孃孃
 - 三姑
 - 弟兄
@@ -618,91 +678,56 @@ Relative:
 - 胞妹
 - 姆姆
 - 骨血
-- 大堂妹
 - 老丈人
-- 伯伯
 - 阿妹
-- 二叔叔
 - 大外甥
 - 侄子
 - 公公
-- 二堂妹
-- 四姑
 - 哥们
 - 小两口
-- 丈夫
 - 亲骨肉
 - 糟糠
-- 二表弟
 - 二叔
 - 阿爸
 - 阿姨
 - 老妹
-- 大堂姐
-- 兄嫂
 - 哥们儿
 - 阿弟
-- 堂弟
-- 大表姐
 - 内子
-- 继父
-- 小伯伯
 - 老亲
 - 相公
-- 大伯伯
 - 婆姨
 - 老姨
 - 爱妻
-- 小叔叔
 - 三姨
-- 大表哥
 - 大舅
-- 弟妹
 - 外甥
-- 二堂弟
 - 姨妈
-- 姊妹
-- 小堂弟
 - 幺姨
-- 二伯
 - 堂叔
 - 生母
-- 手足
 - 奶奶
-- 老叔叔
 - 囡囡
 - 胞姊
 - 老姐儿
-- 亲娘
-- 妈妈
 - 两口子
-- 表姐妹
-- 小堂姐
 - 长姐
 - 祖母
 - 二老
 - 姊姊
-- 大姨
 - 亲属
 - 高堂
 - 小姑
-- 三表姐
 - 人妇
 - 老大
 - 四姨
 - 夫妻
 - 阿爹
-- 大叔叔
 - 大侄子
 - 三伯
-- 姑父
-- 阿哥
 - 双亲
 - 近亲
-- 老公
 - 四舅
-- 妹妹
-- 三表弟
 - 夫人
 - 姐妹
 - 父
@@ -859,7 +884,6 @@ SendMessageTo:
 - 发的短信
 - 发了哪些短信
 - 发过的短信
-- 短信记录
 - 发信息
 TRemarkQ: []
 TRemarkT: []
@@ -869,7 +893,10 @@ TaoBaoLoginWithEmail: []
 TaoBaoLoginWithMobileNum: []
 VehicleHolder: []
 VehicleWithCo: []
-VehicleWithPlate: []
+VehicleWithPlate:
+- 属于哪辆车
+- 的车
+- 哪辆车的车牌号
 WeChatFriend:
 - 微信好友
 WeChatGroupCreator: []
@@ -879,9 +906,11 @@ WeChatHolder: []
 WeChatLoginWithMobileNum: []
 WeChatWithCo: []
 WifeToHusband:
-- 丈夫
+- 老伴儿
 - 老公
 - 老伴
+- 丈夫
+- 孩他爹
 WorkAt:
 - 工作地址
 WorkForCo:
