--- a/sementic_server/data/ontology/v_property_mentions.yml
+++ b/sementic_server/data/ontology/v_property_mentions.yml
@@ -14,8 +14,10 @@
 - UUID
 153:
 - 企业状态
+- 状态
 163:
 - 企业类型
+- 公司的类型
 149:
 - 公司名称
 148:
@@ -101,6 +103,8 @@ Ambiguous:
 - 民族
 154:
 - 注册时间
+- 什么时间注册
+- 注册的时间
 164:
 - 注册资本
 - 注册资金
@@ -122,6 +126,8 @@ Ambiguous:
 157:
 - 网站
 - 网站地址
+- 官网
+- 网址
 17:
 - 职业
 - 做什么工作
