--- a/sementic_server/config/model.config
+++ b/sementic_server/config/model.config
@@ -9,10 +9,10 @@
     "is_training": false,
     "use_one_hot_embeddings": false,
     "sen_encoder_layer": -2,
-    "model_ner_address": "localhost:8500",
-    "dependence_url": "http://120.132.109.87:10088/jfycfx",
-    "grpc_request_timeout": 2.0,
-    "dependence_parser_ip": "10.201.23.159",
+    "model_ner_address": "172.16.102.8:8500",
+    "dependence_url": "http://172.16.42.191:10088/jfycfx",
+    "grpc_request_timeout": 20.0,
+    "dependence_parser_ip": "172.16.102.8",
     "dependence_parser_port": "9000",
     "server_type":{
         "tokenize": "tokenize",
@@ -25,3 +25,4 @@
         "dcoref": "dcoref"
     }
 }
+
