--- a/sementic_server/data/ontology/v_property_mentions.yml
+++ b/sementic_server/data/ontology/v_property_mentions.yml
@@ -65,9 +65,15 @@ Ambiguous:
 - 域名
 14:
 - 婚姻状况
+- 婚姻情况
+- 是否结婚
+- 有没有结婚
+- 什么时候结婚
+- 离过几次婚
 16:
 - 宗教状况
 - 信什么教
+- 宗教信仰
 147:
 - 工商注册号
 30:
@@ -89,12 +95,23 @@ Ambiguous:
 - 政治面貌
 13:
 - 文化程度
+- 学历
+- 什么学历
 46:
 - 新浪微博账号
 2:
 - 曾用名
 18:
 - 服役状况
+- 服役
+- 服役过吗
+- 兵役状况
+- 服过兵役
+- 当过兵
+- 当过几年兵
+- 什么时候开始当兵
+- 什么时候退役
+- 入伍
 19:
 - 标签
 168:
@@ -131,6 +148,7 @@ Ambiguous:
 17:
 - 职业
 - 做什么工作
+- 工作是什么
 4:
 - 英文名
 166:
