--- a/sementic_server/data/yml/relation.yml
+++ b/sementic_server/data/yml/relation.yml
@@ -62,11 +62,12 @@ AuthorizedBy:
 BankCardHolder: []
 BrotherOrSister:
 - 姊妹
+- 姊姊
+- 姊
 - 嫂嫂
 - 哥哥
 - 妹妹
 - 弟妹
-- 二堂哥
 - 兄嫂
 - 兄弟
 - 姐姐
@@ -79,7 +80,34 @@ BrotherOrSister:
 - 阿哥
 - 长兄
 - 弟弟
-- 堂兄弟
+- 姐
+- 幺妹
+- 姐夫
+- 妹子
+- 阿姐
+- 弟
+- 胞妹
+- 大哥
+- 二哥
+- 妹
+- 小弟
+- 老哥
+- 哥
+- 长姐
+- 胞姊
+- 老妹
+- 阿妹
+- 老姐
+- 哥们儿
+- 阿弟
+- 老姐儿
+- 姐妹
+- 弟兄
+- 兄长
+- 仁弟
+- 贤弟
+- 胞姐
+- 老弟
 Call:
 - 致电
 - 通电话
@@ -103,27 +131,83 @@ CalledBy:
 - 接到过哪个人的电话
 ChildToFatherSibling:
 - 二伯伯
-- 小叔叔
-- 三叔叔
 - 大伯伯
 - 伯伯
-- 三叔
 - 四姑
-- 叔叔
 - 三伯伯
 - 小伯伯
-- 大叔叔
-- 二叔叔
-- 老叔叔
 - 伯母
 - 二姑
 - 二伯
 - 姑姑
 - 姑父
+- 叔父
+- 叔叔
+- 三叔
+- 小叔叔
+- 小叔
+- 三叔叔
+- 大叔叔
+- 二叔叔
+- 老叔叔
+- 大爹
+- 叔
+- 表叔
+- 三伯
+- 世叔
+- 老姑
+- 堂叔
+- 伯父
+- 小姑父
+- 姑母
+- 表姑
+- 嬢嬢
+- 幺姑
+- 婶婶
+- 小爹
+- 幺爹
+- 大爷
+- 二叔
+- 小伯
+- 大伯
+- 大姑
+- 老伯
+- 三姑
+- 姆姆
+- 大叔
+- 小姑夫
+- 姑夫
+- 小姑
+- 老叔
 ChildToMotherSibling:
 - 大姨
 - 姨夫
 - 舅舅
+- 三舅
+- 大舅
+- 姨母
+- 老姨
+- 姨爹
+- 幺舅
+- 三姨
+- 姨妈
+- 幺姨
+- 舅妈
+- 舅父
+- 姨娘
+- 舅
+- 阿姨
+- 小姨
+- 老舅
+- 五姨
+- 娘舅
+- 小舅
+- 郎舅
+- 二舅
+- 婆姨
+- 四姨
+- 四舅
+- 二姨
 ChildToParent:
 - 岳父
 - 爸爸
@@ -136,6 +220,36 @@ ChildToParent:
 - 阿妈
 - 养父
 - 养母
+- 老妈
+- 养父母
+- 爹爹
+- 生母
+- 学生家长
+- 生父
+- 双亲
+- 爹娘
+- 娘
+- 爸
+- 妈
+- 阿爹
+- 家长
+- 爹妈
+- 老爹
+- 阿爸
+- 父
+- 爹地
+- 岳母
+- 父母
+- 婆婆
+- 公公
+- 老娘
+- 娘亲
+- 妈咪
+- 继母
+- 母
+- 老母
+- 爹
+- 老丈人
 CoHasAddr:
 - 所在地
 CoHasEmail:
@@ -242,6 +356,9 @@ CousinFromFatherSide:
 - 堂妹
 - 三堂妹
 - 小堂哥
+- 二堂哥
+- 堂兄弟
+- 堂兄
 CousinFromMotherSide:
 - 表姐
 - 三表姐
@@ -302,8 +419,18 @@ EmailOfJDLogin: []
 EmailOfTaoBaoLogin: []
 EmailWithCo: []
 FatherSiblingToChild:
-- 表叔
 - 侄儿
+- 二侄子
+- 三侄子
+- 二侄女
+- 大侄女
+- 小侄女
+- 三侄女
+- 侄女
+- 侄女儿
+- 小侄子
+- 大侄子
+- 侄子
 FixedPhoneHolder: []
 FixedPhoneWithCo: []
 GetMessageFrom:
@@ -322,6 +449,19 @@ HusbandToWife:
 - 老婆
 - 孩他娘
 - 妻子
+- 妻
+- 婆娘
+- 媳妇
+- 妻室
+- 媳妇儿
+- 夫人
+- 内人
+- 内子
+- 太太
+- 伢他妈
+- 爱妻
+- 老婆子
+- 糟糠
 IDCardDLHolder: []
 IDCardTWHolder: []
 IMEIHolder: []
@@ -406,7 +546,13 @@ MobileNumOfWeChatLogin:
 - 登过多少个微信
 MobileNumWithCo: []
 MobileNumWithIMSI: []
-MotherSiblingToChild: []
+MotherSiblingToChild:
+- 外甥
+- 小外甥女
+- 小外甥
+- 大外甥女
+- 外甥女
+- 大外甥
 PAppeared: []
 PHasAddr:
 - 出生地
@@ -492,21 +638,13 @@ ParentToChild:
 - 二儿子
 - 小儿子
 - 外孙女
-- 大外甥女
-- 侄女
 - 大女儿
-- 外甥女
 - 女儿
-- 三侄女
 - 大儿子
 - 儿子
 - 二女儿
-- 二侄女
 - 养子
 - 孙女
-- 小外甥女
-- 大侄女
-- 小侄女
 - 儿女
 - 闺女
 - 女婿
@@ -514,6 +652,24 @@ ParentToChild:
 - 长子
 - 养女
 - 子嗣
+- 后代
+- 三子
+- 独生女
+- 独生子
+- 小孩
+- 小孩儿
+- 囡囡
+- 儿媳
+- 四子
+- 伢
+- 亲骨肉
+- 儿
+- 次女
+- 三女
+- 长女
+- 孩子
+- 四女
+- 子代
 Partner:
 - 同伙
 - 同伙人
@@ -568,187 +724,76 @@ Relative:
 - 亲人
 - 亲属
 - 爷爷
-- 婶婶
 - 亲属
 - 亲人
 - 亲家
-- 表姑
-- 姨母
 - 二爹
-- 三侄子
 - 表舅
-- 二姨
-- 小侄子
-- 婆婆
 - 老汉
-- 幺姑
-- 妻室
-- 爱人
-- 爹爹
-- 三舅
-- 小弟
-- 大姑
 - 太奶奶
-- 爹地
-- 叔父
-- 老弟
 - 爷爷
-- 老姑
-- 大伯
-- 养父母
-- 五姨
-- 娘亲
-- 大哥
-- 生父
-- 小伯
-- 婆娘
 - 祖父
 - 内助
-- 小叔
-- 幺妹
-- 人夫
 - 棠棣
-- 舅父
-- 老哥
-- 媳妇
 - 老子
-- 继母
-- 爹妈
-- 幺舅
-- 贤弟
 - 季母
 - 堂客
-- 老爹
-- 姨爹
-- 家长
-- 伯父
 - 父辈
-- 世叔
-- 阿姐
 - 外婆
-- 小舅
 - 曾祖母
 - 家眷
 - 亲戚
-- 老伯
-- 老姐
 - 外公
 - 家口
 - 收养
-- 二哥
-- 大叔
-- 老舅
 - 外祖父
 - 家室
 - 严父慈母
-- 小外甥
 - 佳偶
 - 亲家
 - 上人
-- 兄长
-- 仁弟
-- 后代
-- 内人
 - 亲家母
 - 姑奶奶
 - 姨奶奶
-- 堂兄
-- 姨娘
-- 父母
 - 远亲
-- 大哥
 - 亲家公
 - 夫妇
 - 妻妾
 - 姻亲
-- 娘舅
-- 二侄子
 - 伉俪
-- 子代
 - 季父
 - 配偶
 - 哥俩
 - 老两口
-- 郎舅
-- 二舅
-- 老叔
-- 爹娘
-- 妹子
 - 汉子
 - 家人
 - 老小
-- 大爷
 - 曾祖父
-- 孩子
-- 太太
 - 外祖母
-- 先生
-- 孃孃
-- 三姑
-- 弟兄
 - 终身伴侣
-- 小姨
-- 舅妈
-- 幺爹
-- 胞妹
-- 姆姆
 - 骨血
-- 老丈人
-- 阿妹
-- 大外甥
-- 侄子
-- 公公
 - 哥们
 - 小两口
-- 亲骨肉
-- 糟糠
-- 二叔
-- 阿爸
-- 阿姨
-- 老妹
-- 哥们儿
-- 阿弟
-- 内子
 - 老亲
-- 相公
-- 婆姨
-- 老姨
-- 爱妻
-- 三姨
-- 大舅
-- 外甥
-- 姨妈
-- 幺姨
-- 堂叔
-- 生母
 - 奶奶
-- 囡囡
-- 胞姊
-- 老姐儿
 - 两口子
-- 长姐
 - 祖母
 - 二老
-- 姊姊
 - 亲属
 - 高堂
-- 小姑
 - 人妇
 - 老大
-- 四姨
 - 夫妻
-- 阿爹
-- 大侄子
-- 三伯
-- 双亲
 - 近亲
-- 四舅
-- 夫人
-- 姐妹
-- 父
 - 父兄
 - 表嫂
-- 哥
+- 孙媳妇
+- 外孙子
+- 外孙女婿
+- 曾孙女
+- 孙女婿
+- 外曾孙女
+- 外曾孙女婿
 Reside:
 - 家庭住址
 - 家庭地址
@@ -814,6 +859,9 @@ SameRoom:
 - 同户
 - 住在一家
 - 同一个酒店
+- 寄宿
+- 寄住
+- 同住
 SameTown:
 - 父老乡亲
 - 乡亲
@@ -849,7 +897,24 @@ SameTrip:
 - 一起坐过火车
 - 火车同行
 - 乘坐同一班列车
+- 同一班火车
+- 同一趟火车
+- 同一个航班
+- 同一班飞机
+- 同一架飞机
+- 同航班
+- 一起做过
+- 一起坐过
+- 同一班汽车
+- 邻座
+- 同一辆大巴
+- 汽车邻座
+- 同一辆汽车
+- 同列车
+- 一起去
+- 一起到
 Schoolmate:
+- 幼儿园同学
 - 同门
 - 老师
 - 幼儿园老师
@@ -862,6 +927,7 @@ Schoolmate:
 - 研究生导师
 - 大学导师
 - 高中同学
+- 中学同学
 - 辅导员
 - 辅导老师
 - 外教
@@ -890,6 +956,8 @@ Schoolmate:
 - 同室
 - 学妹
 - 校友
+- 研究生同学
+- 博士生同学
 SendMessageTo:
 - 发短信
 - 发简讯
@@ -934,7 +1002,14 @@ WifeToHusband:
 - 老公
 - 老伴
 - 丈夫
+- 先生
 - 孩他爹
+- 伢他爸
+- 伢他爹
+- 人夫
+- 相公
+- 夫
+- 官人
 WorkAt:
 - 工作地址
 WorkForCo:
