0117 更新 手机号13993508073的持有者 苏A12345的车主

--- a/sementic_server/config/model.config
+++ b/sementic_server/config/model.config
@@ -9,8 +9,8 @@
     "is_training": false,
     "use_one_hot_embeddings": false,
     "sen_encoder_layer": -2,
-    "model_ner_address": "172.16.102.8:8500",
-    "dependence_url": "http://172.16.42.191:10088/jfycfx",
+    "model_ner_address": "localhost:8500",
+    "dependence_url": "http://120.132.109.87:10088/jfycfx",
     "grpc_request_timeout": 20.0,
     "dependence_parser_ip": "172.16.102.8",
     "dependence_parser_port": "9000",
