--- a/sementic_server/data/yml/quesword.yml
+++ b/sementic_server/data/yml/quesword.yml
@@ -73,6 +73,7 @@ Company:
 - 大厦在哪
 Person:
 - 是谁
+- 是哪个
 - 谁是
 - 什么人
 - 哪个人
@@ -86,6 +87,7 @@ Person:
 - 哪儿些人
 - 谁
 - 的人
+- 的用户
 - 人叫什么
 - 哪几个
 - 哪些
